# hermes-second-brain

./: .env.example  .gitignore  CLAUDE.md  README.md  SOUL.md  docker-compose.yml  pyproject.toml
apps/api/: main.py  router_memory.py  router_tasks.py
apps/cli/: memory_commands.py  task_commands.py
docs/AUDITS/: HERMES-SECOND-BRAIN-MIRROR-BASELINE-2026-04.md  P0-QDRANT-KEY-ROTATION-2026-04.md
libs/memory/: __init__.py  config.py  manager.py
libs/subagents/: __init__.py  collection_manager.py  memory_archivist.py
skills/librarian/: SKILL.md
skills/memory-archivist/: SKILL.md
