[project]
name = "hermes-second-brain"
version = "0.1.0"
description = "Hermes Agent Second Brain — Mem0 + Qdrant + SQLite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mem0ai>=0.1.0",
    "qdrant-client>=1.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libs"]